--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,12 @@
 <% if object.errors.any? %>
-	<ul>
-		<% object.errors.full_messages.each do |msg| %>
-			<li><%= msg %></li>
-		<% end %>
-	</ul>
+	<div id="error_explanation">
+		<h2><%= pluralize(object.errors.count, "error") %>
+			prohibited this project from being saved:</h2>
+
+		<ul>
+			<% object.errors.full_messages.each do |msg| %>
+				<li><%= msg %></li>
+			<% end %>
+		</ul>
+	</div>
 <% end %>
